feat: replace OTP subscription flow with JWT-authenticated CRUD
- Remove requestSubscription/verifyAndExecute OTP flow from SubscriptionService
- Add createSubscription, updateSubscription, deleteSubscription methods with ownership enforcement via AccessDeniedException
- Move subscription CRUD endpoints to WorkspaceController (POST/PUT/DELETE /{workspaceId}/subscriptions[/{id}]) using @AuthenticationPrincipal
- Gut SubscriptionController (empty placeholder) and remove public permitAll rules from SecurityConfig
- Add SubscriptionCreateDto and SubscriptionUpdateDto request DTOs
- Restrict subscription run endpoint to ADMIN role only (TODO resolved)
- Rewrite SubscriptionFormModal and EditSubscriptionModal: remove email field and OTP step, direct API calls
- Add createSubscription, updateSubscription, deleteSubscription to apiService.ts; remove requestSubscription, verifyOtp
- Fix 12 pre-existing ESLint/TypeScript errors (no-explicit-any, clearAuthData unused, synchronous setState in effect, react-refresh/only-export-components)
- All 134 backend tests pass; frontend lint + build pass